--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Kalkulator Logika</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#0f1115" id="themeColorMeta" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -16,8 +17,9 @@
       </div>
     </div>
     <div class="header-actions">
-      <button id="themeToggle" class="ghost" title="Ganti tema (Terang/Gelap)">🌗</button>
-      <button id="btnShare" class="ghost" title="Salin URL dengan ekspresi saat ini">🔗</button>
+      <button id="themeToggle" class="ghost" title="Ganti tema (Terang/Gelap)" aria-label="Toggle Tema">🌗</button>
+      <button id="compactToggle" class="ghost" title="Mode Kompak" aria-label="Mode Kompak">📐</button>
+      <button id="btnShare" class="ghost" title="Salin URL dengan ekspresi saat ini" aria-label="Bagikan Ekspresi">🔗</button>
     </div>
   </header>
 
