feat: update export functionality to use TXT format instead of CSV

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h2>Tabel Kebenaran</h2>
       <div class="table-controls">
         <label><input type="checkbox" id="chkSimplify" /> Ringkas (hapus kolom perantara)</label>
-  <button id="btnExport" class="mini has-icon" title="Ekspor tabel ke CSV"><svg class="ico"><use href="#ico-export"/></svg><span>Ekspor</span></button>
+  <button id="btnExport" class="mini has-icon" title="Ekspor tabel ke TXT"><svg class="ico"><use href="#ico-export"/></svg><span>Ekspor TXT</span></button>
       </div>
       <div id="tableContainer" class="table-scroll placeholder">Belum dibuat.</div>
     </section>
