feat: enhance operator buttons with accessibility labels and symbols

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
   <button id="btnClear" class="has-icon" title="Bersihkan"><svg class="ico"><use href="#ico-clear" /></svg><span>Bersih</span></button>
       </div>
       <div class="helper-buttons" aria-label="Pintasan operator">
-        <button data-insert="AND">AND</button>
-        <button data-insert="OR">OR</button>
-        <button data-insert="XOR">XOR</button>
-        <button data-insert="NOT">NOT</button>
-        <button data-insert="NAND">NAND</button>
-        <button data-insert="NOR">NOR</button>
-        <button data-insert="XNOR">XNOR</button>
-        <button data-insert="->">-></button>
-        <button data-insert="<->"><-></button>
-        <button data-insert="(">(</button>
-        <button data-insert=")">)</button>
+        <button data-insert="AND" aria-label="AND (Konjungsi)"><span class="op-label">AND</span><span class="op-sym">∧</span></button>
+        <button data-insert="OR" aria-label="OR (Disjungsi)"><span class="op-label">OR</span><span class="op-sym">∨</span></button>
+        <button data-insert="XOR" aria-label="XOR (Eksklusif OR)"><span class="op-label">XOR</span><span class="op-sym">⊕</span></button>
+        <button data-insert="NOT" aria-label="NOT (Negasi)"><span class="op-label">NOT</span><span class="op-sym">¬</span></button>
+        <button data-insert="NAND" aria-label="NAND (NOT AND)"><span class="op-label">NAND</span><span class="op-sym">↑</span></button>
+        <button data-insert="NOR" aria-label="NOR (NOT OR)"><span class="op-label">NOR</span><span class="op-sym">↓</span></button>
+        <button data-insert="XNOR" aria-label="XNOR / EQUIV (Ekuivalen)"><span class="op-label">XNOR</span><span class="op-sym">≡</span></button>
+        <button data-insert="->" aria-label="Implikasi"><span class="op-label">IMPL</span><span class="op-sym">→</span></button>
+        <button data-insert="<->" aria-label="Ekuivalen"><span class="op-label">EQUIV</span><span class="op-sym">↔</span></button>
+        <button data-insert="(" aria-label="Buka Kurung"><span class="op-label">(</span><span class="op-sym">⟮</span></button>
+        <button data-insert=")" aria-label="Tutup Kurung"><span class="op-label">)</span><span class="op-sym">⟯</span></button>
       </div>
       <details class="syntax-info">
         <summary>Petunjuk & Sintaks</summary>
